Debugging Training Loop

--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -837,51 +837,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 439
+          "height": 183
         },
-        "outputId": "c8dddea8-0962-4bd5-84a7-306e0bf78038"
+        "outputId": "44d0d1cc-cf20-4629-e48e-87e00d35bddf"
       },
       "cell_type": "code",
       "source": [
-        "train_Q[0]"
+        ""
       ],
-      "execution_count": 47,
+      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[25,\n",
-              " 28,\n",
-              " 8626,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624,\n",
-              " 8624]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 47
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-51-1e724995d1b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mPQB\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPQA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msplit_into_batches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted_clean_questions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtraining_validation_split\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msorted_clean_answers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtraining_validation_split\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+          ]
         }
       ]
     },
@@ -913,6 +888,16 @@
     },
     {
       "metadata": {
+        "id": "XoXuv-kNuMGg",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ]
+    },
+    {
+      "metadata": {
         "id": "GMd_jtm0M1EM",
         "colab_type": "text"
       },
@@ -925,46 +910,54 @@
       "metadata": {
         "id": "xUc4E81zEmQQ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 939
+        },
+        "outputId": "ea5a101a-63dd-44da-970e-88fb721971bd"
       },
       "cell_type": "code",
       "source": [
+        "epochs = 1\n",
+        "\n",
         "for i in range(epochs):\n",
         "\n",
         "    epoch_accuracy = []\n",
         "    epoch_loss = []\n",
         "\n",
         "    for b in range(len(sorted_clean_questions)):\n",
-        "          \n",
-        "        bucket = sorted_clean_questions[b]\n",
         "        questions_bucket = []\n",
-        "        answers_bucket = []\n",
+        "        answers_bucket = []    \n",
         "        bucket_accuracy = []\n",
         "        bucket_loss = []\n",
-        "        for k in range(len(bucket)):\n",
-        "            questions_bucket.append(np.array(sorted_clean_questions[k]))\n",
-        "            answers_bucket.append(np.array(sorted_clean_answers[k]))\n",
+        "        \n",
+        "        for questions_bucket, answers_bucket in split_into_batches(sorted_clean_questions, sorted_clean_answers, batch_size):\n",
+        "  \n",
+        "\n",
+        "        #for k in range(len(questions_bucket)):\n",
+        "        #    questions_bucket.append(np.array(sorted_clean_questions[k]))\n",
+        "        #    answers_bucket.append(np.array(sorted_clean_answers[k]))\n",
         "            \n",
-        "        for ii in tqdm(range(len(questions_bucket) //  batch_size)):\n",
-        "            \n",
-        "            starting_id = ii * batch_size\n",
-        "            \n",
-        "            X_batch = questions_bucket[starting_id:starting_id+batch_size]\n",
-        "            y_batch = answers_bucket[starting_id:starting_id+batch_size]\n",
-        "            \n",
-        "            feed_dict = {model.inputs:X_batch, \n",
-        "                         model.targets:y_batch, \n",
-        "                         model.keep_prob:keep_prob, \n",
-        "                         model.decoder_sequence_length:[len(y_batch[0])]*batch_size,\n",
-        "                         model.encoder_sequence_length:[len(X_batch[0])]*batch_size}\n",
-        "            \n",
-        "            cost, _, preds = session.run([model.loss, model.optimizer, model.predictions], feed_dict=feed_dict)\n",
-        "            \n",
-        "            epoch_accuracy.append(get_accuracy(np.array(y_batch), np.array(preds)))\n",
-        "            bucket_accuracy.append(get_accuracy(np.array(y_batch), np.array(preds)))\n",
-        "            \n",
-        "            bucket_loss.append(cost)\n",
-        "            epoch_loss.append(cost)\n",
+        "          for ii in tqdm(range(len(questions_bucket) //  batch_size)):\n",
+        "\n",
+        "              starting_id = ii * batch_size\n",
+        "\n",
+        "              X_batch = questions_bucket[starting_id:starting_id+batch_size]\n",
+        "              y_batch = answers_bucket[starting_id:starting_id+batch_size]\n",
+        "\n",
+        "              feed_dict = {model.inputs:X_batch, \n",
+        "                           model.targets:y_batch, \n",
+        "                           model.keep_prob:keep_prob, \n",
+        "                           model.decoder_sequence_length:[len(y_batch[0])]*batch_size,\n",
+        "                           model.encoder_sequence_length:[len(X_batch[0])]*batch_size}\n",
+        "\n",
+        "              cost, _, preds = session.run([model.loss, model.opt, model.predictions], feed_dict=feed_dict)\n",
+        "\n",
+        "              epoch_accuracy.append(get_accuracy(np.array(y_batch), np.array(preds)))\n",
+        "              bucket_accuracy.append(get_accuracy(np.array(y_batch), np.array(preds)))\n",
+        "\n",
+        "              bucket_loss.append(cost)\n",
+        "              epoch_loss.append(cost)\n",
         "        if(b%100 == 0):    \n",
         "          print(\"Bucket {}:\".format(b+1), \n",
         "                \" | Loss: {}\".format(np.mean(bucket_loss)), \n",
@@ -976,8 +969,43 @@
         "    \n",
         "    saver.save(session, \"checkpoint/chatbot_{}.ckpt\".format(i))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "  0%|          | 0/1 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1074\u001b[0m             subfeed_t = self.graph.as_graph_element(\n\u001b[0;32m-> 1075\u001b[0;31m                 subfeed, allow_tensor=True, allow_operation=False)\n\u001b[0m\u001b[1;32m   1076\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36mas_graph_element\u001b[0;34m(self, obj, allow_tensor, allow_operation)\u001b[0m\n\u001b[1;32m   3612\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lock\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3613\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_as_graph_element_locked\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_tensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_operation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3614\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m_as_graph_element_locked\u001b[0;34m(self, obj, allow_tensor, allow_operation)\u001b[0m\n\u001b[1;32m   3691\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3692\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Tensor %s is not an element of this graph.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3693\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Tensor Tensor(\"inputs:0\", shape=(?, ?), dtype=int32) is not an element of this graph.",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-61-c3ad880527cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m                            model.encoder_sequence_length:[len(X_batch[0])]*batch_size}\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m               \u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m               \u001b[0mepoch_accuracy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    898\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    899\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 900\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    901\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    902\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1076\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1077\u001b[0m             raise TypeError(\n\u001b[0;32m-> 1078\u001b[0;31m                 'Cannot interpret feed_dict key as Tensor: ' + e.args[0])\n\u001b[0m\u001b[1;32m   1079\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1080\u001b[0m           \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubfeed_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: Cannot interpret feed_dict key as Tensor: Tensor Tensor(\"inputs:0\", shape=(?, ?), dtype=int32) is not an element of this graph."
+          ]
+        }
+      ]
     },
     {
       "metadata": {
