--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -100,7 +100,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 69
         },
         "outputId": "4e83616c-0b52-46de-bc56-1ef7effd234a"
       },
@@ -127,29 +127,15 @@
       "metadata": {
         "id": "oWBAHK8kWX26",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "fa9a90c7-5b0e-4748-abc5-f9a03a387a3c"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "# Files as they appear in the repo clone\n",
         "ls\n"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Cornell Movie Script Database EDA.ipynb  Preproc.ipynb  README.md\r\n",
-            "movie_conversations.txt                  preproc.py     Seq2Seq.ipynb\r\n",
-            "movie_lines.txt                          \u001b[0m\u001b[01;34m__pycache__\u001b[0m/\r\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -247,15 +233,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 103
         },
-        "outputId": "1fa07d6e-57a5-4230-ead7-6469029b8301"
+        "outputId": "faff45d6-ca52-4a3a-b91e-51f1e029b971"
       },
       "cell_type": "code",
       "source": [
         "conversations[0:5]"
       ],
-      "execution_count": 33,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +257,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 89
         }
       ]
     },
@@ -281,15 +267,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 86
         },
-        "outputId": "767ede4b-ee97-4b5e-ed32-ca7b078c82cc"
+        "outputId": "d9cb81b9-9199-45aa-ff9e-7a112395648a"
       },
       "cell_type": "code",
       "source": [
         "get_conversations_ids(conversations[0:5])"
       ],
-      "execution_count": 10,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +290,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 90
         }
       ]
     },
@@ -314,9 +300,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 89
         },
-        "outputId": "e6878b16-f425-4f30-e14b-2f5e48107a5d"
+        "outputId": "34ccd5fc-6592-4c92-8f82-03b344374a45"
       },
       "cell_type": "code",
       "source": [
@@ -324,7 +310,7 @@
         "print(clean_questions[0:3])\n",
         "print(sorted_clean_questions[0:3])"
       ],
-      "execution_count": 11,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,16 +875,16 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 861
+          "height": 2256
         },
-        "outputId": "77106c63-a8e5-4c64-9843-4c585734b5a2"
+        "outputId": "6ae2c1fa-e8c8-44ce-f3b6-4cdb7a8a50e1"
       },
       "cell_type": "code",
       "source": [
         "session.run(tf.global_variables_initializer())\n",
         "PRINT_ERROR = True\n",
         "\n",
-        "epochs = 3\n",
+        "epochs = 20\n",
         "\n",
         "epoch_accuracy = []\n",
         "epoch_loss = []\n",
@@ -909,7 +895,7 @@
         "  bucket_loss = []\n",
         "  \n",
         "  # for bucket index \n",
-        "  for b_idx in tqdm(range(3)):#len(PQIB))):\n",
+        "  for b_idx in tqdm(range(20)):#len(PQIB))):\n",
         "  \n",
         "    X_batch = np.asarray(PQIB[b_idx])\n",
         "    y_batch = np.asarray(PAIB[b_idx])\n",
@@ -943,7 +929,7 @@
         "session.close()\n",
         "    "
       ],
-      "execution_count": 84,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,17 +937,17 @@
             "\n",
             "\n",
             "\n",
-            "  0%|          | 0/3 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\n",
+            "  0%|          | 0/20 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            " 33%|███▎      | 1/3 [00:16<00:32, 16.30s/it]\u001b[A\u001b[A\u001b[A"
+            "  5%|▌         | 1/20 [00:16<05:09, 16.31s/it]\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            " Bucket 1:  | Loss: 11.147171974182129  | Accuracy: 0.5942492012779552\n"
+            " Bucket 1:  | Loss: 11.172239303588867  | Accuracy: 0.6038338658146964\n"
           ],
           "name": "stdout"
         },
@@ -971,23 +957,74 @@
             "\n",
             "\n",
             "\n",
-            " 67%|██████▋   | 2/3 [00:31<00:15, 15.59s/it]\u001b[A\u001b[A\u001b[A\n",
+            " 10%|█         | 2/20 [00:31<04:40, 15.60s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "100%|██████████| 3/3 [00:46<00:00, 15.36s/it]\u001b[A\u001b[A\u001b[A\n",
+            " 15%|█▌        | 3/20 [00:46<04:21, 15.36s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 20%|██        | 4/20 [01:00<04:03, 15.25s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 25%|██▌       | 5/20 [01:09<03:27, 13.81s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 30%|███       | 6/20 [01:13<02:50, 12.21s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 35%|███▌      | 7/20 [01:28<02:43, 12.59s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 40%|████      | 8/20 [01:43<02:34, 12.88s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 45%|████▌     | 9/20 [01:57<02:24, 13.10s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 50%|█████     | 10/20 [02:12<02:12, 13.28s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 55%|█████▌    | 11/20 [02:27<02:00, 13.43s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 60%|██████    | 12/20 [02:42<01:48, 13.55s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 65%|██████▌   | 13/20 [02:57<01:35, 13.66s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 70%|███████   | 14/20 [03:12<01:22, 13.74s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 75%|███████▌  | 15/20 [03:27<01:09, 13.82s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 80%|████████  | 16/20 [03:42<00:55, 13.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 85%|████████▌ | 17/20 [03:57<00:41, 13.95s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 90%|█████████ | 18/20 [04:11<00:27, 14.00s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 95%|█████████▌| 19/20 [04:26<00:14, 14.04s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "100%|██████████| 20/20 [04:41<00:00, 14.09s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "  0%|          | 0/3 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A"
+            "  0%|          | 0/20 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "EPOCH: 0/3  | Epoch loss: 5.577220439910889  | Epoch accuracy: 0.8315228966986156\n"
+            "EPOCH: 0/20  | Epoch loss: 2.7537271976470947  | Epoch accuracy: 0.8057188498402557\n"
           ],
           "name": "stdout"
         },
@@ -997,14 +1034,14 @@
             "\n",
             "\n",
             "\n",
-            " 33%|███▎      | 1/3 [00:14<00:29, 14.86s/it]\u001b[A\u001b[A\u001b[A"
+            "  5%|▌         | 1/20 [00:14<04:42, 14.88s/it]\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            " Bucket 1:  | Loss: 0.6047214865684509  | Accuracy: 0.37731629392971244\n"
+            " Bucket 1:  | Loss: 2.505638599395752  | Accuracy: 0.9667731629392972\n"
           ],
           "name": "stdout"
         },
@@ -1014,42 +1051,58 @@
             "\n",
             "\n",
             "\n",
-            " 67%|██████▋   | 2/3 [00:22<00:11, 11.38s/it]\u001b[A\u001b[A\u001b[A\n",
+            " 10%|█         | 2/20 [00:29<04:28, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "100%|██████████| 3/3 [00:26<00:00,  8.95s/it]\u001b[A\u001b[A\u001b[A\n",
+            " 15%|█▌        | 3/20 [00:44<04:13, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "\u001b[A\u001b[A\u001b[A\n",
+            " 20%|██        | 4/20 [00:59<03:58, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "  0%|          | 0/3 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\n",
+            " 25%|██▌       | 5/20 [01:14<03:43, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            " 33%|███▎      | 1/3 [00:14<00:29, 14.91s/it]\u001b[A\u001b[A\u001b[A"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            " Bucket 1:  | Loss: 1.017672061920166  | Accuracy: 0.9313099041533547\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
+            " 30%|███       | 6/20 [01:29<03:28, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "\n",
-            " 67%|██████▋   | 2/3 [00:29<00:14, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
-            "\n",
-            "\n",
-            "100%|██████████| 3/3 [00:44<00:00, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
+            " 35%|███▌      | 7/20 [01:44<03:13, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "\u001b[A\u001b[A\u001b[A"
+            " 40%|████      | 8/20 [01:59<02:58, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 45%|████▌     | 9/20 [02:14<02:43, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 50%|█████     | 10/20 [02:28<02:28, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 55%|█████▌    | 11/20 [02:43<02:14, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 60%|██████    | 12/20 [02:58<01:59, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 65%|██████▌   | 13/20 [03:13<01:44, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 70%|███████   | 14/20 [03:28<01:29, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 75%|███████▌  | 15/20 [03:43<01:14, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 80%|████████  | 16/20 [03:58<00:59, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 85%|████████▌ | 17/20 [04:13<00:44, 14.89s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 90%|█████████ | 18/20 [04:28<00:29, 14.90s/it]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            " 95%|█████████▌| 19/20 [04:43<00:14, 14.89s/it]\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         }
