minor corrections and text fixes

--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -34,13 +34,17 @@
       "cell_type": "markdown",
       "source": [
         "### TODO:\n",
-        "*  Validation scores to training loop\n",
-        "*  Determine CV loss/acc calculations\n",
+        "* refactor data processing (padding, bucketing)\n",
+        "* Aggregate CV loss/acc into arrays for early stopping\n",
+        "* create config file\n",
         "\n",
-        "# complete:\n",
+        "### Completed:\n",
         "*  Train test split, fixed random seed\n",
-        " \n",
-        "\n"
+        "*  Validation scores to training loop\n",
+        "*  Determine CV loss/acc calculations \n",
+        "\n",
+        "#### distant todo:\n",
+        "* beamsearch decoder"
       ]
     },
     {
@@ -174,13 +178,13 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 103
         },
         "outputId": "97a04e80-ac91-4d80-a836-085f893aa8fe"
       },
       "cell_type": "code",
       "source": [
-        "!pip install tqdm"
+        "#!pip install tqdm   ### use later when in .py files"
       ],
       "execution_count": 5,
       "outputs": [
@@ -214,7 +218,7 @@
         "import time\n",
         "import re\n",
         "from tensorflow.python.layers.core import Dense\n",
-        "from tqdm import tqdm\n",
+        "#from tqdm import tqdm    ### use later when in .py files\n",
         "\n",
         "from sklearn.cross_validation import train_test_split\n",
         "\n",
@@ -478,6 +482,7 @@
         "    ###########################\n",
         "    #decoder_output_dropout is handled in a attention wrapper function outside of this functinon                                                                \n",
         "                                                   \n",
+        "         \n",
         "  with tf.variable_scope('decoder', reuse=True):\n",
         "  \n",
         "    starting_id_vector = tf.tile(tf.constant([word2id_dict['<SOS>']], dtype=tf.int32), [batch_size], name = 'starting_id_vector')                                               \n",
